# soothe-nano

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: 01_pure_nano_example.py  02_nano_with_tools_example.py  03_nano_with_memory_example.py  04_nano_with_subagents_example.py  05_nano_full_composition_example.py  __init__.py
examples/_shared/: config.py
examples/nano_agent/: 01_pure_nano_example.py  02_nano_with_tools_example.py  03_nano_with_memory_example.py  04_nano_with_subagents_example.py  05_nano_full_composition_example.py  __init__.py
examples/nano_agent/_shared/: __init__.py  config.py  streaming.py
src/soothe_nano/: __init__.py
src/soothe_nano/agent/: __init__.py  builder.py  core_agent.py  factory.py  lazy.py  subagent_catalog.py
src/soothe_nano/backends/: __init__.py
src/soothe_nano/config/: __init__.py  constants.py  env.py  middleware_access.py  models.py  models_catalog.py  reload.py  settings.py
src/soothe_nano/events/: __init__.py  catalog.py  constants.py
src/soothe_nano/filesystem/: README.md  __init__.py  _lock_registry.py  discovery_hints.py  exceptions.py  factory.py  grep_search.py  langchain_adapter.py  local.py  protocol.py  unified.py  workspace.py
src/soothe_nano/logging/: __init__.py  context.py  setup.py  thread_logger.py
src/soothe_nano/mcp/: __init__.py  cleanup.py  mcp_config.py  mcp_events.py  mcp_progressive.py  mcp_registry.py  mcp_registry_support.py  mcp_resource_tools.py  mcp_utils.py  reconnect.py
src/soothe_nano/middleware/: __init__.py  _builder.py  _tool_context.py  code_interpreter.py  edit_coalescing.py  filesystem.py  mcp_activation.py  model_call_profiler.py  per_turn_model.py  policy.py  progressive_listing.py  progressive_tools.py  role_routing.py  skill_activation.py  system_prompt.py  tool_call_args_middleware.py  tool_call_args_registry.py  tool_enforcement.py  tool_name_hints.py  tool_optimization_middleware.py  workspace_context.py
src/soothe_nano/paths/: __init__.py  sqlite_paths.py  thread_paths.py
src/soothe_nano/persistence/: persist_metrics.py  postgres_pool_lifecycle.py  postgres_pool_registry.py  postgres_provisioning.py  retry_utils.py  shared_metadata_pool.py  unified.py
src/soothe_nano/plugin/: __init__.py  cache.py  context.py  discovery.py  events.py  exceptions.py  global_registry.py  lazy.py  lifecycle.py  loader.py  manifest.py  registry.py
src/soothe_nano/prompts/: __init__.py  context_xml.py  identity.py  project_instructions.py  system_templates.py
src/soothe_nano/resolve/: __init__.py  _lazy_subagent.py  _resolver_infra.py  _resolver_tools.py  _tool_cache.py  shared_checkpointer_pool.py
src/soothe_nano/security/: README.md  __init__.py  operation_guard.py  path_security.py  policy_models.py  policy_profiles.py  security_api.py  security_enforcer.py
src/soothe_nano/skills/: __init__.py  budget.py  builtins.py  catalog.py  corpus_match.py  discovery_tools.py  events.py  index.py  registry.py  search.py  (+1 more)
tests/: conftest.py  support_config.py
tests/integration/: test_plugin_entry_points.py  test_postgres_store_async.py
tests/unit/: test_create_chat_model_fallback.py  test_expand_path.py  test_home_expansion.py  test_plugin_registry_metadata.py  test_subagent_catalog.py
(+329 files in other folders)
