[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soothe-nano"
version = "0.9.7"
description = "Soothe Nano — batteries-included Coding CoreAgent on deepagents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.15"
keywords = ["soothe", "nano", "coreagent", "agents", "ai", "llm", "langgraph", "deepagents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "soothe-sdk>=1.0.2,<2.0.0",
    "soothe-deepagents>=0.8.0,<1.0.0",
    "aiohttp>=3.9.0,<4.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "jsonschema>=4.0.0,<5.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "pathspec>=0.12.0,<2.0.0",
    "requests>=2.32.3,<3.0.0",
    "aiofiles>=24.1.0",
    "dashscope>=1.20.0",
    "langchain>=1.2.11,<2.0.0",
    "langchain-community>=0.3.0,<1.0.0",
    "langchain-experimental>=0.0.50,<1.0.0",
    "langchain-core>=1.2.18,<2.0.0",
    "langchain-mcp-adapters>=0.2.0,<1.0.0",
    "langchain-openai>=0.3.0,<1.0.0",
    "langchain-quickjs>=0.1.0",
    "langgraph>=1.1.1,<2.0.0",
    "langgraph-checkpoint>=4.0.0,<5.0.0",
    "langgraph-checkpoint-postgres>=3.1.0,<4.0.0",
    "sqlite-vec>=0.1.0",
    "langchain-tavily>=0.2.17",
    "wizsearch>=1.1.8,<2.0.0",
    "deepxiv-sdk>=0.2.5",
    "browser-use>=0.11.0,<0.13.0",
    "psycopg[binary,pool]>=3.2.0,<4.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "PyMuPDF>=1.24.0",
    "docx2txt>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov",
    "ruff>=0.12.0",
    "mypy>=1.0.0",
    "twine>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/mirasoth/soothe-nano"
Documentation = "https://soothe.readthedocs.io"
Repository = "https://github.com/mirasoth/soothe-nano"

[tool.hatch.build.targets.wheel]
packages = ["src/soothe_nano"]

[tool.hatch.build.targets.sdist]
include = ["src/soothe_nano/"]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
per-file-ignores = { "examples/**/*.py" = ["N999", "E402"] }

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "asyncio: mark test as async",
    "integration: mark test as integration test",
]
